--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- change title -->
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 <!-- get rid of divs use sections -->
 <!-- makes sure headers are in decsending order -->
@@ -28,59 +27,59 @@
     <section class="hero"></section>
     <!--use conent classes to replace each class/id for this section-->
     <section class="content">
-        <div id="search-engine-optimization" class="content-sections">
+        <article id="search-engine-optimization" class="content-sections">
             <img src="./assets/images/search-engine-optimization.jpg" alt="notepad with SEO and other related words and pictures on it" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="content-sections">
+        </article>
+        <article id="online-reputation-management" class="content-sections">
             <img src="./assets/images/online-reputation-management.jpg" alt="laptop with a header reading reputaion above some graphs" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="content-sections">
+        </article>
+        <article id="social-media-marketing" class="content-sections">
             <img src="./assets/images/social-media-marketing.jpg" alt="table with computer related icons and words about sharing online media" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
+        </article>
     </section>
-    <div class="benefits">
+    <aside class="benefits">
         <!--combing benefits classes into benefits class-->
-        <div class="benefit-lead">
+        <article class="benefit-types">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="half a cog above a funnel leading to a dollar sign" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </article>
+        <article class="benefit-types">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="a light bulb emmiting above top torso of a suit" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </article>
+        <article class="benefit-types">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="a cog with three tokens with a money sign infront"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
-    <div class="footer">
+        </article>
+    </aside>
+    <footer class="footer">
         <!-- combine in css -->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
