cleaned up css and changed footer to h4 from h2 and added nav for the top of page links

--- a/index.html
+++ b/index.html
@@ -9,22 +9,24 @@
 <!-- get rid of divs use sections -->
 <!-- makes sure headers are in decsending order -->
 <body>
-    <header class="header">
+    <header>
         <!--combine headers in css-->
         <h1>Hori<span id="seo">seo</span>n</h1>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    </li>
+                    <li>
+                        <a href="#online-reputation-management">Online Reputation Management</a>
+                    </li>
+                    <li>
+                        <a href="#social-media-marketing">Social Media Marketing</a>
+                    </li>
+                </ul>
+            </nav>
     </header>
-    <section class="hero"></section>
+    <section class="marketing-image"></section>
     <!--use conent classes to replace each class/id for this section-->
     <section class="content">
         <article id="search-engine-optimization" class="content-sections">
@@ -75,7 +77,7 @@
     </aside>
     <footer class="footer">
         <!-- combine in css -->
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
