--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </p>
         </article>
     </aside>
-    <footer class="footer">
+    <footer>
         <!-- combine in css -->
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
