comment html file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- makes sure headers are in decsending order -->
 <body>
     <header>
-        <!--combine headers in css-->
+        <!-- reformats section to use semantic elemnts and links to each sections -->
         <h1>Hori<span id="seo">seo</span>n</h1>
             <nav>
                 <ul>
@@ -26,8 +26,10 @@
                 </ul>
             </nav>
     </header>
+    <!-- change class to have a better description of the class -->
     <section class="marketing-image"></section>
-    <!--use conent classes to replace each class/id for this section-->
+    <!--combine multiple classes into one to reduce css clutter-->
+    <!-- change to semantic html elements -->
     <section class="content">
         <article id="search-engine-optimization" class="content-sections">
             <img src="./assets/images/search-engine-optimization.jpg" alt="notepad with SEO and other related words and pictures on it" class="float-left" />
@@ -52,7 +54,8 @@
         </article>
     </section>
     <aside class="benefits">
-        <!--combing benefits classes into benefits class-->
+        <!--combining benefits classes into one benefits class-->
+        <!-- change to semantic html elements -->
         <article class="benefit-types">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="half a cog above a funnel leading to a dollar sign" />
@@ -76,7 +79,7 @@
         </article>
     </aside>
     <footer>
-        <!-- combine in css -->
+        <!-- change header to h4 for accessebility standards -->
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
